# piclone

./: .gitignore  README.md
.github/workflows/: docs.yml  helloworld.yml  main.yml
docs/: Doxyfile  conf.py  firmware.md  hardware-api.md  host-tools.md  index.md  requirements.txt
docs/hardware/: bring-up.md  memory-map.md  pinout.md  power.md  troubleshooting.md  wiring.md
piclone_test/: CMakeLists.txt  hardware_api.c  hardware_api.h  main.c  protocol.c  protocol.h
pico-rom-test/: CMakeLists.txt  hardware_api.c  hardware_api.h  main.c  protocol.c  protocol.h
pico-u2f/: CMakeLists.txt  README.md  main.c  sha256.c  sha256.h  tusb_config.h  u2f.c  u2f.h  u2f_hid.c  u2f_hid.h  usb_descriptors.c
rom-builder/: api_server.py  build-rom.py  hardware_api.py  main.py  requirements.txt  romulan_path.py  upload-rom.py
rom-builder/schema/: v1.json
src/: CMakeLists.txt  hardware_api.c  hardware_api.h  json_util.c  json_util.h  main.c  phi2.h  protocol.c  protocol.h
